--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<h1>hhh</h1>
+<title>Free MCPE for PC</title>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+    *{
+        font-family: "Nunito", sans-serif;
+        background-color: black;
+    }
+    .black{
+        color: white;
+    }
+    .download-btn {
+    color: white;
+    border: 2px solid white;
+    border-radius: 100px;
+    width: 200px;
+    height: 100px;
+    font-size: 23px;
+    transition-duration: 0.3s;
+}
+
+.download-btn:hover {
+    transition-duration: 0.3s;
+    background-color: white;
+    color: black;
+    
+}
+
+</style>
+<center>
+<div class="black">
+<h1>In this page you will learn how to install MCPE in PC for Free step by step!</h1>
+<br><br>
+<h2>1. Go to "Microsoft Store".</h2>
+<br><br>
+<h2>2. After going to "Microsoft Store" Go to Search.</h2>
+<br><br>
+<h2>3. Type "Minecraft Launcher".</h2>
+<br><br>
+<h2>4. Install "Minecraft Launcher".</h2>
+<br><br>
+<h2>5. Open "Minecraft Launcher".</h2>
+<br><br>
+<h2>6. Login with your "Microsoft" account.</h2>
+<br><br>
+<h2>7. Choose "Minecraft For Windows".</h2>
+<br><br>
+<h2>8. Choose "Play Trial".</h2>
+<br><br>
+<h2>9. Wait for install.</h2>
+<br><br>
+<h2>10. After install you can play Minecraft PE but the game will be very limited, So follow the steps for unlock the full game.</h2>
+<br><br>
+<h2>11. <a href="https://github.com/q0so/Free-Minecraft/releases/download/App/MCenters.exe">Download this app</a>.</h2>
+<br><br>
+<h2>12. After install the app, open it.</h2>
+<br><br>
+<h2>13. Click "Inject".</h2>
+<br><br><br><br>
+<h2>After click "Inject" will open MCPE and you will see the full game is unlocked.</h2>
+</div>
+<br><br><br>
+<a href="https://github.com/q0so/Free-Minecraft/releases/download/App/MCenters.exe"><button class="download-btn">Download App</button></a>
+<br><br><br><br><br><br>
+<h1 class="black">By Al_Iraq1</h1>
+</center>
