--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <title>Free MCPE for PC</title>
+<link rel="icon/x-image" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main/resources/img/minecraft-creeper-face.jpg">
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
     *{
